添加说明文件

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 我是A中的index.html文件
-11111111111111111111111
+11111111111111111111111 A的修改
 第三次 push -u
 第四次  使用 git push 即可推入远程仓库 
 B添加的内容BBBBBBBBBBBBBBBBBBBBBB
